--- a/VAMOH CHUAGUER/Layouts/Layout 1.xml
+++ b/VAMOH CHUAGUER/Layouts/Layout 1.xml
@@ -51,6 +51,28 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
+                <instance type="Sprite2" uid="1">
+                    <properties>
+                        <initial-visibility>Visible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>752</x>
+                        <y>199</y>
+                        <z>0</z>
+                        <width>73</width>
+                        <height>84</height>
+                        <depth>0</depth>
+                        <hotspotX>0.342465758</hotspotX>
+                        <hotspotY>0.452380955</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
             </instances>
             <effects />
         </layer>
